--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ install:
 #- pip install .
 #- pip install -r requirements.txt
 # command to run tests
-script: python src/mM/mM_tests.py 
+script:
+- "python src/mM/mM_tests.py" 
 
